--- a/trash/src/app/app.component.html
+++ b/trash/src/app/app.component.html
@@ -2,6 +2,8 @@
 <div class="super_container">
     <app-header></app-header>
     <app-home-p></app-home-p>
-    <router-outlet></router-outlet>
+    <main [@routeAnimations]="prepareRoute(outlet)">
+        <router-outlet #outlet="outlet"></router-outlet>
+    </main>
 </div>
 <app-footer></app-footer>
