--- a/trash/src/app/modules/modulos-secundarios/contenido/contenido.component.css
+++ b/trash/src/app/modules/modulos-secundarios/contenido/contenido.component.css
@@ -10,6 +10,44 @@
     margin-top: 80px;
 }
 
+.inner {
+    width: 15vw;
+    margin-top: 10%;
+    margin-left: -5%;
+    text-align: justify;
+}
+
+.inner p {
+    height: 0px;
+    overflow: hidden;
+}
+
+.contact_button {
+    display: block;
+    position: relative;
+    width: 143px;
+    height: 36px;
+    background: rgba(45, 223, 128, 0.1);
+    color: rgba(45, 223, 128, 1);
+    border: none;
+    outline: none;
+    border-radius: 18px;
+    cursor: pointer;
+    -webkit-transition: all 200ms ease;
+    -moz-transition: all 200ms ease;
+    -ms-transition: all 200ms ease;
+    -o-transition: all 200ms ease;
+    transition: all 200ms ease;
+    margin-top: 24px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contact_button:hover {
+    background: rgba(45, 223, 128, 1);
+    color: #FFFFFF;
+}
+
 
 /*********************************
 7. Section Panel
