--- a/trash/src/app/modules/modulos-secundarios/registrar/registrar.component.html
+++ b/trash/src/app/modules/modulos-secundarios/registrar/registrar.component.html
@@ -47,7 +47,7 @@
                                 </div>
 
                                 <br>
-                                <button type="submit" class="contact_button" data-i18n="@@registrar8"><a routerLink="../find">Enviar</a></button>
+                                <button (click)="sand()"  class="contact_button" data-i18n="@@registrar8" routerLink="../find">Enviar</button>
                             </form>
                         </div>
                     </div>
