--- a/trash/src/app/modules/modulos-secundarios/login/login.component.html
+++ b/trash/src/app/modules/modulos-secundarios/login/login.component.html
@@ -9,11 +9,11 @@
                     <!-- Post Comment -->
                     <div class="post_comment">
                         <div class="contact_form_container">
-                            <form routerLink="../find">
+                            <form >
                                 <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu nombre de usuario" data-i18n="@@login1">
                                 <input type="email" maxlength="30" class="contact_input contact_input_email" placeholder="Tu correo" data-i18n="@@login2">
                                 <input type="password" maxlength="30" class="contact_input contact_input_email" placeholder="Tu contraseña" required="required" data-i18n="@@login3">
-                                <button type="submit" class="contact_button" data-i18n="@@login4">Enviar</button>
+                                <button (click)="enviar()" class="contact_button" data-i18n="@@login4" routerLink="../find" type="button">Enviar</button>
                             </form>
                         </div>
                     </div>
