--- a/trash/src/app/modules/modulos-secundarios/signin/signin.component.html
+++ b/trash/src/app/modules/modulos-secundarios/signin/signin.component.html
@@ -15,7 +15,7 @@
                                 <input type="text" maxlength="30" class="contact_input contact_input_name" placeholder="Tu apellido" required="required" data-i18n="@@signin3">
                                 <input type="email" maxlength="30" class="contact_input contact_input_email" placeholder="Tu correo" required="required" data-i18n="@@signin4">
                                 <input type="password" maxlength="30" class="contact_input contact_input_email" placeholder="Tu contraseña" required="required" data-i18n="@@signin5">
-                                <button type="submit" class="contact_button" data-i18n="@@signin6">Enviar</button>
+                                <button type="submit" class="contact_button" data-i18n="@@signin6" (click)="enviar()">Enviar</button>
                             </form>
                         </div>
                     </div>
